update search project

--- a/app/_templates/footer.twig
+++ b/app/_templates/footer.twig
@@ -6,7 +6,7 @@
 				<p class="block-desc">Join over 3000 people who receive rental advice and best property deals</p>
 				<form>
 					<div class="form-group input-btn">
-						<input type="email" name="" />
+						<input type="email" name="" placeholder="Your email" />
 						<button><i class="fa fa-angle-right"></i></button>
 					</div>
 				</form>
