--- a/app/assets/css/pages/_global.scss
+++ b/app/assets/css/pages/_global.scss
@@ -305,6 +305,7 @@ hr {
 	line-height: 25px;
 	margin-right: 5px;
 	i {
+		font-size: 16px;
 		margin-right: 0;
 	}
 }
@@ -330,12 +331,15 @@ button:focus {
 }
 
 .section-title {
-	font-size: 45px;
+	font-size: 42px;
 	text-transform: capitalize;
 	margin-bottom: 40px;
 	font-weight: normal;
 }
-
-section	{
+section {
 	padding: 30px 0;
+}
+
+.link-under {
+	text-decoration:underline;
 }
