--- a/app/assets/css/elements/_forms.scss
+++ b/app/assets/css/elements/_forms.scss
@@ -51,6 +51,7 @@ input {
 
   &.check-switch {
     label{
+      padding-left: 35px;
       &:before {
         content: '';
         display: block;
@@ -301,7 +302,7 @@ input {
   width: 100%;
   height: 45px;
   margin-bottom: 10px;
-
+  border-radius: 3px;
   position: relative;
   border: 1px solid #c6c6c6;
 
@@ -346,6 +347,13 @@ input {
     display: block;
     font: normal normal normal 18px/1 FontAwesome;
   }
+}
+.select--small {
+  width: 140px;
+}
+
+.select--big {
+  width: 220px;
 }
 
 .select-range {
