--- a/app/assets/css/pages/_home.scss
+++ b/app/assets/css/pages/_home.scss
@@ -111,6 +111,10 @@
 			.slick-arrow {
 				opacity: 1;
 			}
+			.thumb-mask:hover {
+				color: #fff;
+				text-decoration: none;
+			}
 		}
 	}
 	.slick-arrow {
@@ -118,6 +122,20 @@
 			opacity: 0;
 		}
 	}
+}
+
+.thumb-mask {
+	@include absolute(top left);
+	width: 100%;
+	height: 100%;
+	background: rgba(#000, 0.4);
+	padding: 20% 40px 0;
+	text-align: center;
+	color:#fff;
+	z-index: 3;
+	text-transform: uppercase;
+	font-size: $size-m;
+	
 }
 
 
@@ -272,8 +290,8 @@
 
 .thumb-service, .icon-service {
 	color: $color-light;
-	white-space: nowrap;
 	span {
+		white-space: nowrap;
 		margin-right: 12px;
 	}
 	i {
