update slide popup

--- a/app/_templates/footer.twig
+++ b/app/_templates/footer.twig
@@ -76,6 +76,7 @@
 
 <section class="quick-link">
 	<div class="thumb-slide carousel slide container" data-module="LinkSlide">
+		<h2 class="block-title">Quick links</h2>
 
 		<div class=" slider-wrapper">
 			<ul class="item active">
