--- a/app/assets/css/pages/_listing.scss
+++ b/app/assets/css/pages/_listing.scss
@@ -121,3 +121,7 @@
 		margin-bottom: 0;
 	}
 }
+
+.modal.and.carousel {
+  position: fixed; // Needed because the carousel overrides the position property
+}
