--- a/app/_templates/layout.twig
+++ b/app/_templates/layout.twig
@@ -67,6 +67,7 @@
 <script src="/bower_components/jquery-ui/jquery-ui.js"></script>
 <script src="/bower_components/ev-emitter/ev-emitter.js"></script>
 <script src="/bower_components/imagesloaded/imagesloaded.js"></script>
+<script src="/bower_components/popper.js/dist/umd/popper.js"></script>
 <!-- endbower -->
 <!-- endbuild -->
 <script src="/bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
