--- a/app/assets/css/blocks/_footer.scss
+++ b/app/assets/css/blocks/_footer.scss
@@ -4,7 +4,7 @@ footer {
   box-shadow: 0 0 10px #ccc;
 }
 .quick-link {
-  padding: 35px 0;
+  padding: 0 0 40px;
 
   .slider-wrapper {
     padding:  0 40px;
