--- a/app/assets/css/elements/_forms.scss
+++ b/app/assets/css/elements/_forms.scss
@@ -68,6 +68,7 @@ input {
         height: 16px;
         background: #fff;
         border-radius: 50%;
+        transition:0.2s;
         @include absolute(top 1px  left 1px); 
       }
     }
@@ -304,6 +305,7 @@ input {
   margin-bottom: 10px;
   border-radius: 3px;
   position: relative;
+  background: #fff;
   border: 1px solid #c6c6c6;
 
   &.input-box {
