--- a/app/assets/css/pages/_home.scss
+++ b/app/assets/css/pages/_home.scss
@@ -235,6 +235,8 @@
 .love {
 	font-size: 32px;
 	color: #fff;
+	line-height: 0;
+	cursor: pointer;
 	@include absolute(top 10px right 10px)
 	i {
 		margin: 0;
