--- a/app/search.twig
+++ b/app/search.twig
@@ -56,7 +56,7 @@
 
 	</section>
 
-	<section class="search-content" data-module="SearchControl">
+	<section class="search-content search-content--small " data-module="SearchControl">
 
 		<div class="filter-wrapper collapse" id="collapseFilter">
 			<div class="container">
@@ -254,7 +254,7 @@
 			</div>
 		</div>
 
-		<div class="search-detail">
+		<div class="search-detail thumb-list">
 			<h3 class="project-title">Starhill</h3>
 			<div class="row">
 				<div class="thumb-item">
@@ -477,7 +477,18 @@
 				</div>
 			</div>
 		</div>
+		<div class="search-map">
+			<div id="map-search"></div>
+		</div>
 	</section>
+
+	<div class="map-result">
+		
+	</div>
+
+	
+
+
 
 
 {% endblock %}
