--- a/app/assets/css/pages/_search.scss
+++ b/app/assets/css/pages/_search.scss
@@ -11,6 +11,18 @@
 }
 
 
+
+.map-result{
+  width: 60%;
+  float: right;
+  min-height: 100vh;
+}
+
+.search-content--small {
+  float: left;
+  max-width: 40%;
+}
+
 .search__show {
   font-size: 16px;
 
@@ -80,9 +92,6 @@
   }
 }
 
-.search-content--small {
-  max-width: 50%;
-}
 
 #advance-filter {
   .fa-angle-down {
